<resources>
    <string name="app_name">ChatterWave</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="likes">%1$d likes</string>
    <string name="hrs_ago">%1$d hrs ago</string>
    <string name="missed_call">Missed call</string>
    <string name="outgoing_call">Outgoing call\n%1$d min</string>
    <string name="enter_your_birthday">Enter your birthday</string>
    <string name="this_information_wont_be_visible_in_your_profile">This information won\'t be visible in your profile</string>
    <string name="use_your_own_birthday">Use your own birthday even if this account is for business, a pet or something else</string>
    <string name="select_date">Select date</string>
    <string name="login_hint">Phone number or email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_an_account">Create an account</string>
    <string name="error_account_doesnt_exist">The mail or phone number that you’ve entered doesn’t appear to belong to an account. Please check your mail or phone number and try again</string>
    <string name="toast_invalid_credentials">Please enter the fields with valid values!</string>
    <string name="error_invalid_pasword">Invalid password</string>
    <string name="error_password_minimum">Password must contain at least 8 characters</string>
    <string name="error_invalid_login">Enter correct email or phone number</string>
    <string name="error_incorrect_mail_or_phone">Incorrect mail or phone number</string>
    <string name="try_again">Try again</string>
    <string name="create_password">Create a password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="eight_characters">8+ characters</string>
    <string name="one_uppercase">1 uppercase</string>
    <string name="one_lowercase">1 lowercase</string>
    <string name="one_digit">1 digit</string>
    <string name="one_special_character">1 special character</string>
    <string name="password_min_requirements">Password doesn’t meet minimal requirements</string>
    <string name="password_latin">Please use only Latin letters</string>
    <string name="password_match">The passwords don\'t match.</string>
    <string name="enter_phone_number_or_email_address">Enter phone number or email address</string>
    <string name="log_in"> Log In</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="by_signing_up_you_agree_with_our">By signing up you agree with our</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="terms_and_conditions_text">Terms and Conditions</string>
    <string name="have_an_account">Have an account?</string>
    <string name="phone_number_error">Looks like your phone number may be incorrect. Please try entering your full number.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="welcome">Welcome to ChatterWave! \n \n
        These Terms of Use (or "Terms") govern your use of Instagram, except where we expressly state that separate terms (and not these) apply, and provide information about the Instagram Service (the "Service"), outlined below.\n
When you create an Instagram account or use Instagram, you agree to these Terms. The Meta Terms of Service do not apply to this Service. \n \n
</string>
    <string name="the_ChatterWave_service">The ChatterWave Service \n</string>
    <string name="the_ChatterWave_service_text">We agree to provide you with the Instagram Service. The Service includes all of the ChatterWave products, features, applications, services, technologies and software that we provide to advance ChatterWave’s mission: To bring you closer to the people and things you love. The Service is made up of the following aspects: \n\n
    \t  •	Offering personalised opportunities to create, connect, communicate, discover and share.
People are different. We want to strengthen your relationships through shared experiences that you actually care about. So we build systems that try to understand who and what you and others care about, and use that information to help you create, find, join and share in experiences that matter to you. Part of that is highlighting content, features, offers and accounts that you might be interested in, and offering ways for you to experience Instagram, based on things that you and others do on and off Instagram. \n\n
    \t  •	Fostering a positive, inclusive and safe environment.
We develop and use tools and offer resources to our community members that help to make their experiences positive and inclusive, including when we think they might need help. We also have teams and systems that work to combat abuse and breaches of our Terms and Policies, as well as harmful and deceptive behaviour. We use all the information we have – including your information – to try to keep our platform secure. We may also share information about misuse or harmful content with other Meta Companies or law enforcement. \n\n
    \t  •	Developing and using technologies that help us consistently serve our growing community.
Organising and analysing information for our growing community is central to our Service. A big part of our Service is creating and using cutting-edge technologies that help us personalise, protect and improve our Service on an incredibly large scale for a broad global community. Technologies such as artificial intelligence and machine learning give us the power to apply complex processes across our Service. Automated technologies also help us to ensure the functionality and integrity of our Service. \n\n
    \t  •	Ensuring access to our Service.
To operate our global Service, we must store and transfer data across our systems around the world, including outside of your country of residence. The use of this global infrastructure is necessary and essential to provide our Service. This infrastructure may be owned or operated by Meta Platforms, Inc., Meta Platforms Ireland Limited or their affiliates. \n\n
    \t  •	Connecting you with brands, products and services in ways you care about.
We use data from Instagram and other Meta Company Products, as well as from third-party partners, to show you ads, offers and other sponsored content that we believe will be meaningful to you. And we try to make that content as relevant as all your other experiences on Instagram. \n\n
    \t  •	Research and innovation.
We use the information we have to study our Service and collaborate with others on research to make our Service better and contribute to the well-being of our community. \n\n
    \t  •   Research and innovation.
We use the information we have to study our Service and collaborate with others on research to make our Service better and contribute to the well-being of our community.  \n \n
</string>
    <string name="your_commitments">Your commitments \n</string>
    <string name="your_commitments_text">
        In return for our commitment to provide the Service, we require you to make the below commitments to us.
Who can use Instagram. We want our Service to be as open and inclusive as possible, but we also want it to be safe, secure and in accordance with the law. So, we need you to commit to a few restrictions in order to be part of the Instagram community. \n\n
    \t  •	You must be at least 13 years old or the minimum legal age in your country to use Instagram.  \n\n
    \t  •	You must not be prohibited from receiving any aspect of our Service under applicable laws or engaging in payments-related Services if you are on an applicable denied party listing. \n\n
    \t  •	We must not have previously disabled your account for violation of law or any of our policies. \n\n
    \t  •	You must not be a convicted sex offender. \n\n
How you can\'t use Instagram. Providing a safe and open Service for a broad community requires that we all do our part. \n\n
    \t  •	You can\'t impersonate others or provide inaccurate information.
You don\'t have to disclose your identity on Instagram, but you must provide us with accurate and up-to-date information (including registration information), which may include providing personal data. Also, you may not impersonate someone or something you aren\'t, and you can\'t create an account for someone else unless you have their express permission. \n\n
    \t  •	You can\'t do anything unlawful, misleading or fraudulent or for an illegal or unauthorised purpose. \n\n
    \t  •	You can\'t violate (or help or encourage others to violate) these Terms or our policies, including in particular the \n\n
    \t  •	You can\'t do anything to interfere with or impair the intended operation of the Service.
This includes misusing any reporting, dispute or appeals channel, such as by making fraudulent or groundless reports or appeals. \n\n
    \t  •	You can\'t attempt to create accounts or access or collect information in unauthorised ways.
This includes creating accounts or collecting information in an automated way without our express permission. \n\n
    \t  •	You can\'t sell, licence or purchase any account or data obtained from us or our Service.
This includes attempts to buy, sell or transfer any aspect of your account (including your username); solicit, collect or use login credentials or badges of other users; or request or collect Instagram usernames, passwords or misappropriate access tokens. \n\n
    \t  •	You can\'t post someone else\'s private or confidential information without permission or do anything that violates someone else\'s rights, including intellectual property rights (e.g. copyright infringement, trademark infringement, counterfeit or pirated goods).
You may use someone else\'s works under exceptions or limitations to copyright and related rights under applicable law. You represent that you own or have obtained all necessary rights to the content you post or share. Learn more, including how to report content that you think infringes your intellectual property rights. \n\n
    \t  •	You can\'t modify, translate, create derivative works of or reverse engineer our products or their components. \n\n
    \t  •	You can\'t use a domain name or URL in your username without our prior written consent. \n\n
    </string>
    <string name="permissions_you_give_to_us">Permissions you give to us \n</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="add_profile_photo_text">Add a profile photo so that your friends know it\'s you</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="incorrect_photo_format">The photo format is incorrect. Please upload a photo in HEIC, Jpeg or Png format.</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="close">Close</string>
    <string name="skip">Skip</string>
    <string name="delete_profile_photo">Delete profile photo</string>
    <string name="change_profile_photo">Change profile photo</string>
</resources>