<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/interngramLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:src="@drawable/chatterwave_logo_small"
        app:layout_constraintBottom_toTopOf="@id/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTextLayout"
            style="@style/TextInputLayoutDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorIconDrawable="@null"
            android:hint="@string/login_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginTextInput"
                style="@style/TextInputEditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextLayout"
            style="@style/TextInputLayoutDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorIconDrawable="@null"
            android:layout_marginTop="@dimen/margin_default"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextInput"
                style="@style/TextInputEditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPassword"
            style="@style/DefaultBoldFootnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/forgot_password"
            android:textColor="@color/blue_forgot_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/PrimaryButton"
            app:iconGravity="top"
            android:padding="@dimen/material_button_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x2"
            android:text="@string/log_in" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orText"
        style="@style/DefaultBoldFootnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/greyscale_black_65"
        app:layout_constraintBottom_toTopOf="@id/socialNetworks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main" />

    <LinearLayout
        android:id="@+id/socialNetworks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/notAMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginWithFacebook"
            style="@style/DefaultBoldFootnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:drawableStart="@drawable/facebook_logo"
            android:drawablePadding="4dp"
            android:text="@string/log_in_with_facebook"
            android:textColor="@color/blue" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginWithGoogle"
            style="@style/DefaultBoldFootnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/google_logo"
            android:drawablePadding="4dp"
            android:text="@string/log_in_with_google"
            android:textColor="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notAMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_x2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notAMemberText"
            style="@style/DefaultRegularFootnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member"
            android:textColor="@color/greyscale_black_65" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createAnAccount"
            style="@style/DefaultBoldFootnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/create_an_account"
            android:textColor="@color/blue_create_an_account" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>