<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.test.chatterwave.beta.features.auth_activity.password_recovery.create_new_password.CreateNewPasswordFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:src="@drawable/arrow_back_ios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/DefaultBoldTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/create_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/TextInputLayoutDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        app:counterEnabled="false"
        app:endIconMode="password_toggle"
        app:errorIconDrawable="@null"
        app:errorEnabled="true"
        app:errorTextColor="@color/error_red"
        app:boxStrokeErrorColor="@color/error_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            style="@style/TextInputEditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/requirementsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.test.chatterwave.beta.features.feed.ui.RequirementChecker
                android:id="@+id/eightCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:requirementChecker="@drawable/check"
                app:requirementEnabled="false"
                app:requirementText="@string/eight_characters" />

            <com.test.chatterwave.beta.features.feed.ui.RequirementChecker
                android:id="@+id/oneLowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:requirementChecker="@drawable/check"
                app:requirementEnabled="false"
                app:requirementText="@string/one_lowercase" />

            <com.test.chatterwave.beta.features.feed.ui.RequirementChecker
                android:id="@+id/oneUppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:requirementChecker="@drawable/check"
                app:requirementEnabled="false"
                app:requirementText="@string/one_uppercase" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal">

            <com.test.chatterwave.beta.features.feed.ui.RequirementChecker
                android:id="@+id/oneDigit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:requirementChecker="@drawable/check"
                app:requirementEnabled="false"
                app:requirementText="@string/one_digit" />

            <com.test.chatterwave.beta.features.feed.ui.RequirementChecker
                android:id="@+id/oneSpecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:requirementChecker="@drawable/check"
                app:requirementEnabled="false"
                app:requirementText="@string/one_special_character" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        style="@style/TextInputLayoutDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requirementsLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirPasswordEditText"
            style="@style/TextInputEditTextDefault"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:padding="@dimen/material_button_padding"
        android:enabled="false"
        app:iconGravity="top"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordInputLayout"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>