<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/margin_8">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/text_view_rounded_corners"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            style="@style/DefaultBoldSubheadline"
            android:id="@+id/takePhotoMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="@color/blue"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyscale_black_10" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/DefaultBoldSubheadline"
            android:id="@+id/chooseFromLibraryMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_56dp"
            android:gravity="center"
            android:text="@string/choose_from_library"
            android:textColor="@color/blue" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        style="@style/DefaultBoldSubheadline"
        android:id="@+id/closeMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56dp"
        android:background="@drawable/text_view_rounded_corners"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/error_red"/>

</androidx.appcompat.widget.LinearLayoutCompat>